--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,17 +1,28 @@
 cmake_minimum_required(VERSION 3.26)
 
-# Set the project name.
 project(refgen)
 
-# Add an executable.
 add_executable(refgen
     refgen.cpp
     ../src/image.cpp
     ../src/stb/stb.cpp
 )
 
-# Specify the C++ standard.
 set_target_properties(refgen PROPERTIES
+    CXX_STANDARD 20
+    CXX_STANDARD_REQUIRED True
+)
+
+
+project(crop)
+
+add_executable(crop
+    crop.cpp
+    ../src/image.cpp
+    ../src/stb/stb.cpp
+)
+
+set_target_properties(crop PROPERTIES
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED True
 )
