--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(randfile)
+project(tools)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,4 +8,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(
     randfile
     randfile.cpp
+)
+
+add_executable(
+    colorgram
+    colorgram.cpp
+    ../src/image.cpp
+    ../src/stb/stb.cpp
 )
