download stb_image using CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,6 @@ project(steg)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include(FetchContent)
-FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip 
-)
-
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
 add_executable(steg
     src/main.cpp
     src/args.cpp
@@ -45,5 +35,43 @@ target_link_libraries(
     GTest::gtest_main
 )
 
+include(FetchContent)
+FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip 
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 include(GoogleTest)
 gtest_discover_tests(steg_test)
+
+
+FetchContent_Declare(
+    stb_image
+    URL https://raw.githubusercontent.com/nothings/stb/master/stb_image.h
+    DOWNLOAD_NO_EXTRACT true
+    DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/include
+)
+
+FetchContent_GetProperties(stb_image)
+if (NOT stb_image_POPULATED)
+    FetchContent_Populate(stb_image)
+endif()
+
+FetchContent_Declare(
+    stb_image_write
+    URL https://raw.githubusercontent.com/nothings/stb/master/stb_image_write.h
+    DOWNLOAD_NO_EXTRACT true
+    DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/include
+)
+
+FetchContent_GetProperties(stb_image_write)
+if (NOT stb_image_write_POPULATED)
+    FetchContent_Populate(stb_image_write)
+endif()
+
+target_include_directories(steg PRIVATE ${CMAKE_BINARY_DIR}/include)
+target_include_directories(steg_test PRIVATE ${CMAKE_BINARY_DIR}/include)
